# py_project

./: .gitignore  Makefile  README.md  new.py  pyproject.toml  setup.py
py_project/: __info__.py  __init__.py
